# uncver-artifacts

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Info.plist  LICENSE  README.md  rustfmt.toml
.agent/rules/: knowledge_management.md
.github/workflows/: ci.yml  release-please.yml  release.yml  test.yml
homebrew/: uncver-artifacts.rb
src/: gui.rs  lib.rs  main.rs  paths.rs  scratch_wry.rs  tray.rs
src/artifacts/: builder.rs  mod.rs  watcher.rs
src/podman/: install.rs  machine.rs  mod.rs  runner.rs  traefik.rs
src/tray/: menu.rs  mod.rs
src/ui/: components.rs  mod.rs  state.rs  widget.rs
src/ui/components/: artifact.rs  create_artifact_modal.rs  create_modal.rs  delete_modal.rs  edit_modal.rs  folder_picker.rs  icons.rs  inputfield.rs  layout.rs  menu.rs  menu_item.rs  mod.rs  modal.rs  modal_button.rs  search.rs  view_modal.rs
src/ui/state/: animation.rs  mod.rs  mode.rs  persistent.rs  status.rs  trigger.rs
src/ui/widget/: mod.rs  update.rs  view.rs
src/upgrade/: mod.rs
