[package]
name = "uncver-artifacts"
version = "0.3.0"
edition = "2021"
description = "CLI tool for managing uncver artifacts with Podman integration"
license = "MIT"
authors = ["Sir Davis <sirdavis@uncver.co>"]
repository = "https://github.com/sirdavis99/uncver-artifacts"
homepage = "https://github.com/sirdavis99/uncver-artifacts"
keywords = ["podman", "artifacts", "cli", "containers"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "Sir Davis <sirdavis@uncver.co>"
copyright = "2024, Sir Davis <sirdavis@uncver.co>"
license-file = ["LICENSE", "4"]
depends = "$auto, podman"
section = "utils"
priority = "optional"
assets = [
    ["target/release/uncver-artifacts", "/usr/bin/uncver-artifacts", "755"],
    ["README.md", "/usr/share/doc/uncver-artifacts/README.md", "644"],
]

[[bin]]
name = "uncver-artifacts"
path = "src/main.rs"

[lib]
name = "uncver_artifacts"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
notify = "8.2.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.8"
tray-icon = "0.22.0"
tao = "0.35.0"

[profile.release]
opt-level = 3
lto = true
